@@ -8,6 +8,7 @@ import eu.webeid.security.authtoken.WebEidAuthToken;
 import eu.webeid.security.challenge.ChallengeNonceStore;
 import eu.webeid.security.exceptions.AuthTokenException;
 import eu.webeid.security.validator.AuthTokenValidator;
+import eu.webeid.security.validator.ValidationInfo;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.security.authentication.AuthenticationProvider;
@@ -20,12 +21,10 @@ import org.springframework.security.web.authentication.preauth.PreAuthenticatedA
 import org.springframework.stereotype.Component;
 
 import java.security.cert.CertificateEncodingException;
-import java.security.cert.X509Certificate;
-import java.util.Collections;
 import java.util.List;
 
 /**
- * Parses JWT from token string inside AuthTokenDTO and attempts authentication.
+ * Validates the Web eID authentication token supplied in AuthTokenDTO.
  */
 @Component
 public class AuthTokenDTOAuthenticationProvider implements AuthenticationProvider {
@@ -46,15 +45,17 @@ public class AuthTokenDTOAuthenticationProvider implements AuthenticationProvide
     public Authentication authenticate(Authentication auth) throws AuthenticationException {
         LOG.info("authenticate(): {}", auth);
 
-        final PreAuthenticatedAuthenticationToken authentication = (PreAuthenticatedAuthenticationToken) auth;
-        final WebEidAuthToken authToken = ((AuthTokenDTO) authentication.getCredentials()).getToken();
+        if (!(auth.getCredentials() instanceof AuthTokenDTO credentials) || credentials.token() == null) {
+            throw new AuthenticationServiceException("Authentication token is missing");
+        }
+        final WebEidAuthToken authToken = credentials.token();
 
-        final List<GrantedAuthority> authorities = Collections.singletonList(USER_ROLE);
+        final List<GrantedAuthority> authorities = List.of(USER_ROLE);
 
         try {
             final String nonce = challengeNonceStore.getAndRemove().getBase64EncodedNonce();
-            final X509Certificate userCertificate = tokenValidator.validate(authToken, nonce);
-            return WebEidAuthentication.fromCertificate(userCertificate, authorities);
+            final ValidationInfo validationInfo = tokenValidator.validate(authToken, nonce);
+            return WebEidAuthentication.fromCertificate(validationInfo.subjectCertificate(), authorities);
         } catch (AuthTokenException e) {
             throw new AuthenticationServiceException("Web eID token validation failed", e);
         } catch (CertificateEncodingException e) {
