@@ -10,6 +10,7 @@ import eu.webeid.security.exceptions.ChallengeNullOrEmptyException;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.impl.security.DefaultVerifySecureDigestRequest;
 import io.jsonwebtoken.security.SignatureAlgorithm;
+import io.jsonwebtoken.security.SignatureException;
 import io.jsonwebtoken.security.VerifySecureDigestRequest;
 
 import java.io.ByteArrayInputStream;
@@ -19,23 +20,21 @@ import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.security.PublicKey;
 import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Objects;
 import java.util.Set;
 
 import static eu.webeid.security.util.Base64Decoder.decodeBase64;
-import static eu.webeid.security.util.Collections.concat;
 import static eu.webeid.security.util.Strings.isNullOrEmpty;
 
 public class AuthTokenSignatureValidator {
 
     // Supported subset of JSON Web Signature algorithms as defined in RFC 7518, sections 3.3, 3.4, 3.5.
     // See https://github.com/web-eid/libelectronic-id/blob/main/include/electronic-id/enums.hpp#L176.
-    private static final Set<String> ALLOWED_SIGNATURE_ALGORITHMS = new HashSet<>(Arrays.asList(
+    private static final Set<String> ALLOWED_SIGNATURE_ALGORITHMS = Set.of(
         "ES256", "ES384", "ES512", // ECDSA
         "PS256", "PS384", "PS512", // RSASSA-PSS
         "RS256", "RS384", "RS512"  // RSASSA-PKCS1-v1_5
-    ));
+    );
 
     private final byte[] originBytes;
 
@@ -70,7 +69,12 @@ public class AuthTokenSignatureValidator {
         }
         Objects.requireNonNull(hashAlgorithm, "hashAlgorithm");
 
-        final byte[] decodedSignature = decodeBase64(signature);
+        final byte[] decodedSignature;
+        try {
+            decodedSignature = decodeBase64(signature);
+        } catch (IllegalArgumentException e) {
+            throw new AuthTokenParseException("Token signature is not valid Base64", e);
+        }
 
         final byte[] originHash = hashAlgorithm.digest(originBytes);
         final byte[] nonceHash = hashAlgorithm.digest(currentChallengeNonce.getBytes(StandardCharsets.UTF_8));
@@ -84,8 +88,12 @@ public class AuthTokenSignatureValidator {
                 new ByteArrayInputStream(concatSignedFields),
                 null, null,
                 publicKey, decodedSignature);
-        if (!signatureAlgorithm.verify(verificationRequest)) {
-            throw new AuthTokenSignatureValidationException();
+        try {
+            if (!signatureAlgorithm.verify(verificationRequest)) {
+                throw new AuthTokenSignatureValidationException();
+            }
+        } catch (SignatureException e) {
+            throw new AuthTokenSignatureValidationException(e);
         }
     }
 
@@ -97,6 +105,12 @@ public class AuthTokenSignatureValidator {
         if (isNullOrEmpty(argument)) {
             throw new AuthTokenParseException("'" + fieldName + "' is null or empty");
         }
+    }
+
+    private static byte[] concat(byte[] first, byte[] second) {
+        byte[] result = Arrays.copyOf(first, first.length + second.length);
+        System.arraycopy(second, 0, result, first.length, second.length);
+        return result;
     }
 
 }
